<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">美食行</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
 <string name="title_activity_login">LoginActivity</string>
    <string name="login_main_tips">或者使用美食行账户登录</string>
    <string name="login_other_tips">登录到美食行</string>
    <string name="login_username">账户:</string>
    <string name="login_username_hint">这里输入昵称</string>
    <string name="login_password">密码:</string>
    <string name="login_password_hint">这里输入密码</string>
    <string name="login_action">登录</string>
    <string name="login_by_weibo">使用新浪微博账号登录</string>
    <string name="login_by_qq">使用腾讯QQ账号登录</string>
    <string name="register_email">邮箱:</string>
    <string name="register_email_hint">这里输入email</string>
    <string name="register_nickname">昵称:</string>
    <string name="register_nickname_hint">这里输入昵称</string>
    <string name="register_password">密码:</string>
    <string name="register_password_hint">这里输入密码</string>
    <string name="register_action">注册</string>
    <string name="title_activity_food_mag_detail">FoodMagDetailActivity</string>
    <string name="title_activity_nearby_food">NearbyFoodActivity</string>
    
</resources>